# cpp-yandex-course

./: README.md
01-wt/m-02/hw/: set_01.cc  set_02.cc  set_03  set_03.cc
02-yb/m-01/assignments/: 02_block_mass.cc  03_region_db.cc  06_element_ref.cc
02-yb/m-01/assignments/04_task_manager/: CMakeLists.txt  TaskManager.h
02-yb/m-04/ex/: iterators_1.cc
02-yb/m-04/hw/mod-04/prefix/: CMakeLists.txt  main.cpp  prefix.h
02-yb/m-05/hw/: inh-1.cc
02_yellow/module-01/assignments/: 07_containers_os.h
02_yellow/module-01/lectures_examples/: templates.cc  types  types.cc
02_yellow/module-02/unit-test-framework/: CMakeLists.txt  main.cc  test_runner.h
02_yellow/module-04/assignments/: 01_vector_part.cc  02_find_greater_element.cc  03_split_into_words  04_algorithms  04_algorithms.cc  09_merge  09_merge.cc  templates-1.cc
03-rb/m-02/hw/: comments.txt
03-rb/m-04/linked-list/: CMakeLists.txt  LinkedList.h  linked_list.cpp
03-rb/m-04/simple-vector/: CMakeLists.txt  simple_vector.cpp  simple_vector.h
03-rb/m-05/: test_runner.h
03-rb/m-05/Sportsman/: CMakeLists.txt  main.cpp
03-rb/m-05/StringSet/: CMakeLists.txt  StringSet.cpp
03-rb/m-05/examples/: list.cpp  vec_invalid.cpp
03-rb/m-05/stack-vector/: CMakeLists.txt  stack_vector.cpp  stack_vector.h
03-rb/m-05/text_editor/: CMakeLists.txt  text_editor.cpp
03_red/module-01/: table.cc
04-bb/module-01/hash-person/: CMakeLists.txt  hash_person.cpp
04-bb/module-01/hash-table/: hash_set.h  (+2 more)
04-bb/module-02/: test_runner.h
yb-02/: CMakeLists.txt
yb-02/m-01/: CMakeLists.txt
yb-02/m-02/: CMakeLists.txt
(+94 files in other folders)
